Fix star rating alignment

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,10 +4,9 @@
 
 .App {
   text-align: center;
-  background-color: #101010;
-  height: 100vh;
-  width: 100vw;
-  overflow: hidden;
+  height: 100%;
+  width: 100%;
+  /* overflow: hidden; */
   color: white;
   display: flex;
   flex-direction: column;
