--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,9 +1,9 @@
 .footer {
   display: flex;
   justify-content: space-between;
-  margin-top: 20px;
+  margin-top: 3rem;
+  margin-bottom: 2rem;
   padding: 0 20px;
-  bottom: 0;
   width: 97%;
-  margin-bottom: 20px;
+  height: auto;
 }
