--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -2,23 +2,19 @@
     display: flex;
     flex-direction: column;
     max-width: 1200px;
-    width: 68rem;
+    width: 90vw;
     align-items: center;
     justify-content: center;
     color: white;
-    height: auto;
 }
 
 .main__app-description {
-    width: 50%;
+    width: 70%;
     margin-top: -1.5rem;
 }
 
 .main__carousel {
-    /* display: flex;
-    flex-direction: row; */
-    margin-top: 2rem;
-    /* align-items: center; */
-    width: 100%;
+    margin-top: 3rem;
+    width: 90vw;
     padding: 0 2rem;
 }
