--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: linear-gradient(#121212, #000);
+  height: 100%;
+  width: 100%;
 }
 
 code {
